# resnet-frontend

./: next.config.mjs
app/: page.tsx
codigo/frontend/: next.config.mjs  package-lock.json  package.json
codigo/network/: main.py  requeriments.txt
codigo/network/model/: Treinable.py  TreinableImp.py  measurement.py
codigo/network/model/resnet/: ResNet.py  ResNetImp.py
codigo/network/model/resnet/block/: Block.py  NormalizationLayer.py
codigo/restnet-backend-worker/: Cargo.toml  wrangler.toml
codigo/restnet-backend-worker/src/: lib.rs
components/: camera.tsx
components/util/: ia.tsx
