[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.0.18"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
ring = "0.16.20"
data-encoding = "2.5.0"


[profile.release]
opt-level = "s" # optimize for size in release builds
lto = true
strip = true
codegen-units = 1

[[r2_buckets]]
binding = 'MODEL_BUCKET' 
bucket_name = 'restnet-picture'
